manifests/adguard/deploy-adguard-sync.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard-sync
  namespace: adguard
spec:
  serviceName: adguard-sync
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: adguard-sync
  template:
    metadata:
      labels:
        app: adguard-sync
        name: adguard-sync
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      automountServiceAccountToken: false
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
      containers:
      - name: adguard-sync
        image: ghcr.io/bakito/adguardhome-sync:v0.6.17
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 100
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
        command: ["/opt/go/adguardhome-sync","run"]
        resources:
          requests:
            cpu: 1m
            memory: 25Mi
          limits:
            # cpu: 60m
            memory: 60Mi
      dnsConfig:
        options:
          - name: ndots
            value: "1"
