manifests/adguard/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard
  namespace: adguard
spec:
  serviceName: adguard
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
        name: adguard
    spec:
      restartPolicy: Always
      automountServiceAccountToken: false
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: kubernetes.io/arch
                operator: In
                values: 
                - "amd64"
      containers:
      - name: adguard
        image: docker.io/adguard/adguardhome:v0.107.56
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 100
          seccompProfile:
            type: RuntimeDefault
        resources:
          requests:
            cpu: 60m
            memory: 150Mi
          limits:
            # cpu: 2000m
            memory: 250Mi
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 443
          name: dns-tls-443
          protocol: TCP
        - containerPort: 853
          name: dns-tls-853
          protocol: TCP
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /login.html
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /login.html
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - name: nfs-adguard-conf
          mountPath: /opt/adguardhome/conf
        - name: nfs-adguard-work
          mountPath: /opt/adguardhome/work
        - name: dns-wildcard-cert
          mountPath: /etc/certs
          readOnly: true
      volumes:
      - name: nfs-adguard-conf
        persistentVolumeClaim:
          claimName: nfs-adguard-conf
      - name: nfs-adguard-work
        persistentVolumeClaim:
          claimName: nfs-adguard-work
      - name: dns-wildcard-cert
        secret:
          secretName: letsencrypt-dns-wildcard-cert
