manifests/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adguard
    tailscale.com/proxy-class: "run-on-worker"
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "home-adguard"
  name: adguard-web
  namespace: adguard
spec:
  type: ClusterIP
  ports:
  - name: adguard-web
    port: 3000
    protocol: TCP
    targetPort: http
  - name: adguard-tls
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app: adguard

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adguard
  name: adguard-dns
  namespace: adguard
  annotations:
    lbipam.cilium.io/ips: 192.168.10.53
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
  - name: dns-tcp
    #nodePort: 30725
    port: 53
    protocol: TCP
    targetPort: dns-tcp
  - name: dns-udp
    #nodePort: 30725
    port: 53
    protocol: UDP
    targetPort: dns-udp
  - name: dns-tls-443
    port: 443
    protocol: TCP
    targetPort: dns-tls-443
  - name: dns-tls-853
    #nodePort: 32725
    port: 853
    protocol: TCP
    targetPort: dns-tls-853
  selector:
    app: adguard

---
apiVersion: v1
kind: Service
metadata:
  labels:
    tailscale.com/proxy-class: "run-on-worker"
  annotations:
    tailscale.com/tailnet-fqdn: "cloud-adguard.tailb7050.ts.net"
  name: cloud-adguard-egress
  namespace: adguard
spec:
  externalName: cloud-adguard-egress
  type: ExternalName
